EditFilterDialog: add "Last Played" back

It was assumed that his is a recent regression, but looking at the
code, this bug was present at least in January 2011.

BUG: 302746
FIXED-IN: 2.6